...
                        android:layout_weight="1"
                        android:text="Текущая тема:"
                        android:textSize="14sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tvCurrentTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="📘 Классическая"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="#1976D2" />

                </LinearLayout>

                <!-- Кнопка выбора темы -->
                <Button
                    android:id="@+id/btnSelectTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Выбрать тему оформления"
                    android:textSize="14sp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
...
